[package]
name = "err-trace"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-error = { version = "0.2.1" }
tracing = { version = "0.1.41" }
anyhow = { version = "1.0.99" }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "time"] }
thiserror = { version = "2.0.15" }
